tests/solidity-semantic-tests/out/errors/panic_via_import/C.approval.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_392ug6_l/s2.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    intc_0 // 1
    return

main_after_if_else@2:
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0x1e7aad1c 0x3ac90b08 // method "a()void", method "b()void"
    txna ApplicationArgs 0
    match a b
    err


// /tmp/multisource_392ug6_l/s2.sol.C.a[routing]() -> void:
a:
    txn GroupIndex
    bz a_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

a_ternary_merge@4:
    !
    assert // not payable
    err // Panic

a_ternary_false@3:
    intc_1 // 0
    b a_ternary_merge@4


// /tmp/multisource_392ug6_l/s2.sol.C.b[routing]() -> void:
b:
    txn GroupIndex
    bz b_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

b_ternary_merge@4:
    !
    assert // not payable
    err // E

b_ternary_false@3:
    intc_1 // 0
    b b_ternary_merge@4
